# pathtracer-rust

./: .gitignore  Cargo.toml  README.md
example/: empty_cornell_box.json  empty_cornell_box.yml  homer.yml  mesh_scene.json  mesh_scene.yml  smallpt.yml  sphere_scene.json  sphere_scene.yml  teapot.yml  triangle_scene.json  triangle_scene.yml
example/pathtracer/: cornell_box.yml  homer.yml  smallpt.yml  teapot.yml
example/raytracer/: cornell_box.yml  homer.yml  smallpt.yml  teapot.yml
src/: camera.rs  constant.rs  engine.rs  light.rs  main.rs  material.rs  mesh.rs  objects.rs  ray.rs  scene.rs  texture_material.rs  utils.rs
