[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.13.0"
nalgebra = { version="0.25.4", features = ["serde-serialize"] }
serde = "1.0.136"
serde_yaml = "0.8.23"
rand = "0.8.5"
show-image = "0.10.1"
clap = { version = "3.1.8", features = ["derive"] }
